--- a/css/styles.css
+++ b/css/styles.css
@@ -1,251 +1,265 @@
 @font-face {
   font-family: Raleway;
-  font-style:normal;
+  font-style: normal;
   font-weight: 800;
   src: url("../fonts/raleway/raleway-800.woff2") format("woff2");
   font-display: swap;
 }
 @font-face {
   font-family: Rubik;
-  font-style:normal;
+  font-style: normal;
   font-weight: 400;
   src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
   font-display: swap;
 }
 @font-face {
   font-family: Rubik;
-  font-style:normal;
+  font-style: normal;
   font-weight: 700;
   src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
   font-display: swap;
 }
 @font-face {
   font-family: Rubik;
-  font-style:normal;
+  font-style: normal;
   font-weight: 800;
   src: url("../fonts/rubik/rubik-800.woff2") format("woff2");
   font-display: swap;
 }
-body{
-  font-family: Rubik,sans-serif;
+body {
+  font-family: Rubik, sans-serif;
   font-size: 18px;
   line-height: 30px;
-  font-style:normal;
+  font-style: normal;
   color: #444444;
 }
-.main-header{
-  background: #FFE17F;
+.main-header {
+  background: #ffe17f;
   color: #000000;
 }
-.navigation-link{
+.navigation-link {
   color: #000000;
   font-size: 16px;
-line-height: 19px;
-text-decoration: none;
+  line-height: 19px;
+  text-decoration: none;
 }
-.navigation-element, .footer-navigation-link{
-  font-family: Raleway,sans-serif;
+.navigation-element,
+.footer-navigation-link {
+  font-family: Raleway, sans-serif;
   font-weight: 800;
-font-size: 18px;
-line-height: 21px;
-text-decoration: none;
-color: #000000;
-text-transform: uppercase;
-letter-spacing: 0.2em;
+  font-size: 18px;
+  line-height: 21px;
+  text-decoration: none;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
 }
-.tab-title{
-  font-family: Raleway,sans-serif;
+.tab-title {
+  font-family: Raleway, sans-serif;
   font-weight: 800;
-font-size: 50px;
-line-height: 50px;
-color: #000000;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
 }
-.option{
+.option {
   font-size: 16px;
 }
-.option-value{
+.option-value {
   font-size: 36px;
-line-height: 30px;
+  line-height: 30px;
 }
-.catalog-link{
-  font-family: Raleway,sans-serif;
+.catalog-link {
+  font-family: Raleway, sans-serif;
   font-weight: 800;
   font-size: 18px;
-line-height: 24px;
-color: #000000;
-text-decoration: none;
+  line-height: 24px;
+  color: #000000;
+  text-decoration: none;
 }
-.button{
-  font-family: Raleway,sans-serif;
-  font-weight: 800;
-font-size: 18px;
-line-height: 21px;
-color: #000000;
-text-decoration: none;
-text-transform: uppercase;
-letter-spacing: 0.2em;
-border: 0;
-background-color: transparent;
-}
-.order{
-  font-family: Raleway,sans-serif;
+.button {
+  font-family: Raleway, sans-serif;
   font-weight: 800;
   font-size: 18px;
-line-height: 23px;
-color: #000000;
-letter-spacing: 0.2em;
-text-transform: uppercase;
-background-image:url("../img/delivery1.svg") ;
-background-repeat: no-repeat;
-background-position: right;
-background-size: 47px 31px;
+  line-height: 21px;
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  border: 0;
+  background-color: transparent;
 }
-.contacts-subtitle{
+.order {
+  font-family: Raleway, sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  background-image: url("../img/delivery1.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 47px 31px;
+}
+.contacts-subtitle {
   font-weight: 700;
   font-size: 24px;
 }
-.contacts-address-text{
-  font-style:normal;
+.contacts-address-text {
+  font-style: normal;
 }
-.contacts-phone{
-  font-style:normal;
+.contacts-phone {
+  font-style: normal;
   color: #000;
 }
-.page-footer{
+.page-footer {
   background-color: #444444;
 }
-.footer-navigation-link, .footer-contacts-address, .footer-contacts-phone{
-  color: #FFFFFF;
+.footer-navigation-link,
+.footer-contacts-address,
+.footer-contacts-phone {
+  color: #ffffff;
 }
-.footer-contacts-phone{
+.footer-contacts-phone {
   text-decoration: none;
 }
-.delivery-company-item{
+.delivery-company-item {
   font-weight: 700;
   font-size: 18px;
 }
-.services, .advantage, .newsletter{
-  background-color: #F0F0F0;
+.services,
+.advantage,
+.newsletter {
+  background-color: #f0f0f0;
 }
-
-.catalog-item{
-  background-color:  #FFE17F;
+.catalog-link {
+  display: block;
+  height: 100%;
+}
+.catalog-item {
+  background-color: #ffe17f;
   width: 160px;
-height: 160px;
+  height: 160px;
   display: inline-block;
   font-family: Raleway;
   line-height: 24px;
   letter-spacing: -0.02em;
- }
-.virtual{
+}
+.virtual {
   background-image: url("../img/category-1.svg");
   background-size: 160px 160px;
 }
-.monopods{
+.monopods {
   background-image: url("../img/category-2.svg");
   background-size: 160px 160px;
 }
-.cameras{
+.cameras {
   background-image: url("../img/category-3.svg");
   background-size: 160px 160px;
 }
-.fitness{
+.fitness {
   background-image: url("../img/category-4.svg");
   background-size: 160px 160px;
 }
-.watch{
+.watch {
   background-image: url("../img/category-5.svg");
   background-size: 160px 160px;
 }
-.quadrocopters{
+.quadrocopters {
   background-image: url("../img/category-6.svg");
   background-size: 160px 160px;
 }
-.delivery{
+.delivery {
   background-image: url("../img/illustration-delivery.png");
   background-repeat: no-repeat;
-background-position: right;
-background-size: 180px 160px;
+  background-position: right;
+  background-size: 180px 160px;
 }
-.garanty{
+.garanty {
   background-image: url("../img/illustration-warranty.svg");
   background-repeat: no-repeat;
-background-position: right;
-background-size: 180px 160px;
+  background-position: right;
+  background-size: 180px 160px;
 }
-.credit{
+.credit {
   background-image: url("../img/illustration-credit.svg");
   background-repeat: no-repeat;
-background-position: right;
-background-size: 180px 160px;
+  background-position: right;
+  background-size: 180px 160px;
 }
-.breadcrumbs-link{
+.breadcrumbs-link {
   font-size: 16px;
-line-height: 19px;
-font-weight: 400;
-text-decoration: none;
-color: #000;
-opacity: 0.6;
+  line-height: 19px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #000;
+  opacity: 0.6;
 }
-.catalog-filter, .sorting-type, .pagination{
-  background-color: #EBEBEB;
+.catalog-filter,
+.sorting-type,
+.pagination {
+  background-color: #ebebeb;
 }
-.products-filter{
-  background-color: #DCDCDC;}
-
-.products-filter, .sorting-type{
-  font-family: Raleway,sans-serif;
-  font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.2em;
-text-transform: uppercase;
+.products-filter {
+  background-color: #dcdcdc;
 }
 
-.catalog-filter-title{
+.products-filter,
+.sorting-type {
+  font-family: Raleway, sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+
+.catalog-filter-title {
   font-weight: 700;
   font-size: 18px;
-line-height: 20px;
-letter-spacing: -0.02em;
+  line-height: 20px;
+  letter-spacing: -0.02em;
 }
-.control{
+.control {
   font-size: 16px;
-line-height: 19px;
-text-decoration: none;
-border:0;
-outline: 0;
-background-color: transparent;
+  line-height: 19px;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
 }
-.product-card-name{
+.product-card-name {
   font-weight: 700;
   line-height: 24px;
   letter-spacing: -0.02em;
   color: #000;
   text-decoration: none;
 }
-.product-card-price{
+.product-card-price {
   line-height: 21px;
   font-weight: 400;
 }
-.pagination-show-more, .pagination-prev, .pagination-next{
+.pagination-show-more,
+.pagination-prev,
+.pagination-next {
   font-family: Raleway;
   font-weight: 800;
-font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.2em;
-color: #000000;
-text-decoration: none;
-text-transform: uppercase;
-}
-.pagination-link{
   font-size: 16px;
-line-height: 19px;
-text-decoration: none;
-color: #000;
-opacity: 0.3;
+  line-height: 19px;
+  letter-spacing: 0.2em;
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
 }
-.catalog-filter-label{
+.pagination-link {
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
+  color: #000;
+  opacity: 0.3;
+}
+.catalog-filter-label {
   font-size: 15px;
-line-height: 18px;
-color: #000;
-opacity: 0.3;
+  line-height: 18px;
+  color: #000;
+  opacity: 0.3;
 }
