--- a/css/styles.css
+++ b/css/styles.css
@@ -26,16 +26,28 @@
   src: url("../fonts/rubik/rubik-800.woff2") format("woff2");
   font-display: swap;
 }
+html{
+  height: 100%;
+}
 body {
+  margin: 0;
+  min-height: 100%;
   font-family: Rubik, sans-serif;
   font-size: 18px;
   line-height: 30px;
   font-style: normal;
   color: #444444;
+  display: flex;
+  flex-direction: column;
 }
 .main-header {
   background: #ffe17f;
   color: #000000;
+  width: 1160px;
+height: 300px;
+margin: 0 auto;
+display: flex;
+flex-direction: column;
 }
 .navigation-link {
   color: #000000;
@@ -96,10 +108,16 @@ body {
   color: #000000;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  background-image: url("../img/delivery1.svg");
   background-repeat: no-repeat;
   background-position: right;
   background-size: 47px 31px;
+}
+.auto-delivery{
+  background-image: url("../img/delivery1.svg");
+  background-repeat: no-repeat;
+  width: 125px;
+height: 100px;
+background-color: #FFE17F;
 }
 .contacts-subtitle {
   font-weight: 700;
@@ -131,6 +149,11 @@ body {
 .advantage,
 .newsletter {
   background-color: #f0f0f0;
+}
+.catalog-list{
+  width: 1160px;
+height: 253px;
+margin: 0 auto;
 }
 .catalog-link {
   display: block;
@@ -262,4 +285,87 @@ body {
   line-height: 18px;
   color: #000;
   opacity: 0.3;
+}
+.navigation{
+  display: flex;
+  justify-content: space-between;
+  width: 1075px;
+height: 21px;
+flex-direction: column;
+}
+.navigation-header{
+  display: flex;
+  width: 1075px;
+height: 21px;
+align-items: center;
+justify-content: space-between;
+outline: 5px solid rgba(255, 99, 78, 0.5);
+
+}
+.navigation-user{
+  display: flex;
+  flex-grow: 2;
+
+}
+
+  
+.navigation-services{
+  display: flex;
+  justify-content: space-around;
+  width: 1041px;
+height: 50px;
+align-items: center;
+}
+
+.bestsellers{
+display: flex;
+width: 1161px;
+margin: 0 auto;
+justify-content: space-between;
+}
+.services{display: flex;
+  width: 1440px;
+margin: 0 auto;
+justify-content: space-around;
+align-items: flex-start;}
+.advantage{display: flex;
+  justify-content: space-between;
+align-items:center;
+width: 1035px;
+margin:  0 auto;
+margin-top: 90px;}
+.index-columns{
+display: flex;
+margin: 0 auto;
+width: 1120px;
+justify-content: space-between;
+align-items: center;}
+.newsletter{
+  display: flex;
+  width: 1440px;
+  margin: 0 auto;
+  justify-content: space-around;
+  align-items: center;
+}
+.page-footer{display: flex;
+  align-items: center;
+  width: 1440px;
+  height: 321px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+.footer-contacts{
+  
+margin-left: 139px;
+}
+.footer-navigation-services{
+  display: flex;
+  margin-right: 58px;
+  width: 444px;
+  height: 20px;
+  justify-content: space-around;
+}
+.footer-social{
+  margin-left: 645px;
+  margin-right: 392px;
 }
