--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   src: url("../fonts/rubik/rubik-800.woff2") format("woff2");
   font-display: swap;
 }
-html{
+html {
   height: 100%;
 }
 body {
@@ -57,10 +57,14 @@ body {
   background: #ffe17f;
   color: #000000;
   width: 1160px;
-height: 300px;
-margin: 0 auto;
-display: flex;
-flex-direction: column;
+  height: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+input {
+  border: none;
+  background-color: transparent;
 }
 .navigation-link {
   color: #000000;
@@ -79,69 +83,88 @@ flex-direction: column;
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
-.navigation{
+.navigation {
   display: flex;
   justify-content: space-between;
-flex-direction: column;
+  flex-direction: column;
 }
-.navigation-header{
+.navigation-header {
   display: flex;
   width: 1075px;
-height: 21px;
-align-items: center;
-justify-content: space-between;
-margin-left: 60px;
+  height: 21px;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 60px;
 }
-.navigation-user{
-display: flex;
-width:  538px;
-justify-content: space-between;
-list-style-type: none;
+.navigation-user {
+  display: flex;
+  width: 538px;
+  justify-content: space-between;
+  list-style-type: none;
 }
-.navigation-item:nth-child(1){flex-grow: 2;}
-.navigation-item:nth-child(2){flex-grow: 1;}
-.navigation-item:nth-child(3){flex-grow: 1;}
+.navigation-item:nth-child(1) {
+  flex-grow: 2;
+}
+.navigation-item:nth-child(2) {
+  flex-grow: 1;
+}
+.navigation-item:nth-child(3) {
+  flex-grow: 1;
+}
 
-input{border: none;
-background-color: transparent;}
-.navigation-services{
+.navigation-services {
   display: flex;
   justify-content: space-around;
   width: 1041px;
-height: 50px;
-align-items: center;
-margin-top: 29px;
-margin-left: 60px;
-list-style-type: none;
+  height: 50px;
+  align-items: center;
+  margin-top: 29px;
+  margin-left: 60px;
+  list-style-type: none;
 }
-.link-list{
+.link-list {
   list-style-type: none;
   display: flex;
   gap: 29px;
 }
-.navigation-item-element:nth-child(1){flex-grow: 3;}
-.navigation-item-element:nth-child(2){flex-grow: 1;}
-.navigation-item-element:nth-child(3){flex-grow: 2;}
-.navigation-item-element:nth-child(4){flex-grow: 1;}
+.navigation-item-element:nth-child(1) {
+  flex-grow: 3;
+}
+.navigation-item-element:nth-child(2) {
+  flex-grow: 1;
+}
+.navigation-item-element:nth-child(3) {
+  flex-grow: 2;
+}
+.navigation-item-element:nth-child(4) {
+  flex-grow: 1;
+}
 
-.first-slider, .second-slider, .third-slider
-{display: flex;
+.bestsellers {
+  margin: 0 auto;
+  width: 1161px;
+}
+.first-slider,
+.second-slider,
+.third-slider {
+  display: flex;
   width: 1161px;
   height: 560px;
-margin: 0 auto;}
-.product-slider{
+  margin: 0 auto;
+}
+.product-slider {
   display: flex;
   margin-left: 700px;
 }
 
-.catalog-list{
-margin: 0 auto;
-display: flex;
-margin-top: 70px;
-width: 1160px;
-height: 253px;
-list-style-type: none;
-gap: 40px;
+.catalog-list {
+  margin: 0 auto;
+  display: flex;
+  margin-top: 70px;
+  width: 1160px;
+  height: 253px;
+  list-style-type: none;
+  gap: 40px;
 }
 .catalog-link {
   display: block;
@@ -161,7 +184,6 @@ gap: 40px;
   font-size: 50px;
   line-height: 50px;
   color: #000000;
-
 }
 .option {
   font-size: 16px;
@@ -191,12 +213,12 @@ gap: 40px;
   background-position: right;
   background-size: 47px 31px;
 }
-.auto-delivery{
+.auto-delivery {
   background-image: url("../img/delivery1.svg");
   background-repeat: no-repeat;
   width: 125px;
-height: 100px;
-background-color: #FFE17F;
+  height: 100px;
+  background-color: #ffe17f;
 }
 .contacts-subtitle {
   font-weight: 700;
@@ -338,66 +360,80 @@ background-color: #FFE17F;
   opacity: 0.3;
 }
 
-.services{display: flex;
-  width: 1440px;
-margin: 69px auto 90px;
-justify-content: space-around;
-align-items: flex-start;
-}
-.advantage{display: flex;
-  justify-content: space-between;
-align-items:center;
-width: 1160px;
-margin:  0 auto;
-margin-top: 90px;}
-.index-columns{
-display: flex;
-margin: 0 auto;
-width: 1120px;
-justify-content: space-between;
-align-items:stretch;}
-.about-us{
-  width: 560px;
-}
-.contacts{
-  width: 560px;
-  }
-.newsletter{
+.services {
   display: flex;
-  width: 1440px;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+.advantage {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1160px;
+  margin: 0 auto;
+  margin-top: 90px;
+}
+.index-columns {
+  display: flex;
+  margin: 0 auto;
+  width: 1120px;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.about-us {
+  width: 560px;
+}
+.contacts {
+  width: 560px;
+}
+.newsletter {
+  display: flex;
   margin: 0 auto;
   justify-content: space-around;
   align-items: center;
 }
-.inner-header  {
- margin-left: auto;
- margin-right: auto;
+.main-inner {
+  margin: 0 auto;
+  width: 1440px;
 }
-.monopod{margin-left: 200px;}
-.breadcrumbs{display: flex;
+.inner-header {
+  width: 560px;
+}
+.breadcrumbs {
+  display: flex;
   width: 425px;
   height: 19px;
-justify-content: space-between;
-margin-left: 200px;
-list-style-type: none;}
-.catalog-filter-list, .catalog-filter-group{
+  justify-content: space-between;
   list-style-type: none;
 }
-.catalog-goods{
-  display: flex;
-justify-content: center;}
-.product-list{
-  display: flex;
-  width: 760px;
-flex-wrap: wrap;
-list-style-type: none;
-gap: 40px;
+.catalog-filter-list,
+.catalog-filter-group {
+  list-style-type: none;
 }
-.pagination{display: flex;
+.filter {
+  width: 468px;
+}
+.sorting-catalog-products {
+  width: 972px;
+}
+.catalog-goods {
+  display: flex;
+  justify-content: center;
+}
+.product-list {
+  display: flex;
   width: 760px;
-justify-content: space-between;
-align-items: center;
-list-style-type: none;}
+  flex-wrap: wrap;
+  list-style-type: none;
+  gap: 40px;
+}
+.pagination {
+  display: flex;
+  width: 760px;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+}
 .page-footer {
   background-color: #444444;
 }
@@ -407,26 +443,26 @@ list-style-type: none;}
   color: #ffffff;
 }
 .footer-contacts-phone {
-  text-decoration: none;}
+  text-decoration: none;
+}
 
-.page-footer{display: flex;
+.page-footer {
+  display: flex;
   align-items: center;
-  width: 1440px;
   margin: 0 auto;
   flex-wrap: wrap;
 }
-.footer-contacts{
-
-margin-left: 139px;
+.footer-contacts {
+  margin-left: 139px;
 }
-.footer-navigation-services{
+.footer-navigation-services {
   display: flex;
   margin-right: 58px;
   width: 444px;
   height: 20px;
   justify-content: space-around;
 }
-.footer-social{
+.footer-social {
   margin-left: 645px;
   margin-right: 392px;
 }
