--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,16 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .button {
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -61,6 +70,21 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
+}
+.logo{
+  position: relative;
+    top: -23px;
+    left: 61px;
+}
+.navigation-header {
+  display: flex;
+  width: 1075px;
+  height: 21px;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 60px;
+  
 }
 input {
   border: none;
@@ -88,14 +112,7 @@ input {
   justify-content: space-between;
   flex-direction: column;
 }
-.navigation-header {
-  display: flex;
-  width: 1075px;
-  height: 21px;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: 60px;
-}
+
 .navigation-user {
   display: flex;
   width: 538px;
@@ -114,32 +131,31 @@ input {
 
 .navigation-services {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 1041px;
   height: 50px;
   align-items: center;
-  margin-top: 29px;
-  margin-left: 60px;
   list-style-type: none;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 60px;
 }
 .link-list {
   list-style-type: none;
   display: flex;
   gap: 29px;
+  padding-left: 60px;
+  width: 1160px;
 }
 .navigation-item-element:nth-child(1) {
-  flex-grow: 3;
+  margin-right: 304px;
 }
 .navigation-item-element:nth-child(2) {
-  flex-grow: 1;
+  margin-right: 19px;
 }
 .navigation-item-element:nth-child(3) {
-  flex-grow: 2;
+  margin-right: 62px;
 }
-.navigation-item-element:nth-child(4) {
-  flex-grow: 1;
-}
-
 .bestsellers {
   margin: 0 auto;
   width: 1161px;
@@ -156,15 +172,30 @@ input {
   display: flex;
   margin-left: 700px;
 }
-
+.slider-title{
+  margin-left: 40px;
+  margin-top: 121px;
+  margin-bottom: 19px;
+}
+.description{
+  margin-left: 40px;
+  margin-bottom: 120px;
+}
+.specifications{
+  margin-left: 40px;
+  
+}
 .catalog-list {
+  outline: 1px solid #666;
   margin: 0 auto;
   display: flex;
   margin-top: 70px;
   width: 1160px;
-  height: 253px;
   list-style-type: none;
   gap: 40px;
+  padding-left: 0;
+  flex-wrap: wrap;
+  margin-bottom: 169px;
 }
 .catalog-link {
   display: block;
@@ -178,6 +209,104 @@ input {
   line-height: 24px;
   letter-spacing: -0.02em;
 }
+.virtual {
+  background-image: url("../img/category-1.svg");
+  background-size: 160px 160px;
+}
+.monopods {
+  background-image: url("../img/category-2.svg");
+  background-size: 160px 160px;
+}
+.cameras {
+  background-image: url("../img/category-3.svg");
+  background-size: 160px 160px;
+}
+.fitness {
+  background-image: url("../img/category-4.svg");
+  background-size: 160px 160px;
+}
+.watch {
+  background-image: url("../img/category-5.svg");
+  background-size: 160px 160px;
+}
+.quadrocopters {
+  background-image: url("../img/category-6.svg");
+  background-size: 160px 160px;
+}
+.convenience{
+  max-width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.delivery {
+  background-image: url("../img/illustration-delivery.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 180px 160px;
+}
+.garanty {
+  background-image: url("../img/illustration-warranty.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 180px 160px;
+}
+.credit {
+  background-image: url("../img/illustration-credit.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 180px 160px;
+}
+
+.advantage {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1160px;
+  margin: 0 auto;
+  margin-top: 90px;
+margin-bottom: 97px;}
+  .auto-delivery {
+    background-image: url("../img/delivery1.svg");
+    background-repeat: no-repeat;
+    width: 125px;
+    height: 100px;
+    background-color: #ffe17f;
+  }
+  .index-columns {
+    display: flex;
+    margin: 0 auto;
+    outline: 1px solid #666;
+    width: 1160px;
+    margin-bottom: 87px;
+  }
+  .about-us {
+    width: 560px;
+    margin-right: 40px;}
+    
+  .contacts {
+    width: 560px;
+  }
+  .title-company{
+    padding: 0;
+    margin: 0;
+    margin-top: 49px;
+    margin-bottom: 26px;
+  }
+  .advantage-range{
+    width: 497px;
+height: 202px;
+  }
+  .delivery-company
+  {
+    margin-bottom: 52px;
+  }
+  .title-mailing{
+  margin: 0;
+  padding: 0;
+  margin-top: 75px;
+  }
 .tab-title {
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -213,13 +342,7 @@ input {
   background-position: right;
   background-size: 47px 31px;
 }
-.auto-delivery {
-  background-image: url("../img/delivery1.svg");
-  background-repeat: no-repeat;
-  width: 125px;
-  height: 100px;
-  background-color: #ffe17f;
-}
+
 .contacts-subtitle {
   font-weight: 700;
   font-size: 24px;
@@ -241,48 +364,16 @@ input {
   background-color: #f0f0f0;
 }
 
-.virtual {
-  background-image: url("../img/category-1.svg");
-  background-size: 160px 160px;
+
+.main-inner{
+  width: 1160px;
+  margin: 0 auto;
 }
-.monopods {
-  background-image: url("../img/category-2.svg");
-  background-size: 160px 160px;
+
+.inner-header {
+  width: 560px;
 }
-.cameras {
-  background-image: url("../img/category-3.svg");
-  background-size: 160px 160px;
-}
-.fitness {
-  background-image: url("../img/category-4.svg");
-  background-size: 160px 160px;
-}
-.watch {
-  background-image: url("../img/category-5.svg");
-  background-size: 160px 160px;
-}
-.quadrocopters {
-  background-image: url("../img/category-6.svg");
-  background-size: 160px 160px;
-}
-.delivery {
-  background-image: url("../img/illustration-delivery.png");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 180px 160px;
-}
-.garanty {
-  background-image: url("../img/illustration-warranty.svg");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 180px 160px;
-}
-.credit {
-  background-image: url("../img/illustration-credit.svg");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 180px 160px;
-}
+
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 19px;
@@ -291,10 +382,22 @@ input {
   color: #000;
   opacity: 0.6;
 }
+.breadcrumbs {
+  display: flex;
+  width: 425px;
+  height: 19px;
+  justify-content: space-between;
+  list-style-type: none;
+}
+.catalog-goods {
+  display: flex;
+  justify-content: center;
+}
 .catalog-filter,
 .sorting-type,
 .pagination {
   background-color: #ebebeb;
+  width: 100%;
 }
 .products-filter {
   background-color: #dcdcdc;
@@ -360,66 +463,14 @@ input {
   opacity: 0.3;
 }
 
-.services {
-  display: flex;
-  justify-content: space-around;
-  margin: 0 auto;
-}
-.advantage {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 1160px;
-  margin: 0 auto;
-  margin-top: 90px;
-}
-.index-columns {
-  display: flex;
-  margin: 0 auto;
-  width: 1120px;
-  justify-content: space-between;
-  align-items: stretch;
-}
-.about-us {
-  width: 560px;
-}
-.contacts {
-  width: 560px;
-}
-.newsletter {
-  display: flex;
-  margin: 0 auto;
-  justify-content: space-around;
-  align-items: center;
-}
-.main-inner {
-  margin: 0 auto;
-  width: 1440px;
-}
-.inner-header {
-  width: 560px;
-}
-.breadcrumbs {
-  display: flex;
-  width: 425px;
-  height: 19px;
-  justify-content: space-between;
-  list-style-type: none;
-}
+
+
 .catalog-filter-list,
-.catalog-filter-group {
+.catalog-filter-group,
+.contacts-schedule {
   list-style-type: none;
 }
-.filter {
-  width: 468px;
-}
-.sorting-catalog-products {
-  width: 972px;
-}
-.catalog-goods {
-  display: flex;
-  justify-content: center;
-}
+
 .product-list {
   display: flex;
   width: 760px;
@@ -447,9 +498,9 @@ input {
 }
 
 .page-footer {
+  margin-top: auto;
   display: flex;
   align-items: center;
-  margin: 0 auto;
   flex-wrap: wrap;
 }
 .footer-contacts {
